gcc/testsuite/gdc.test/compilable/must_use_assign.d
import core.attribute;

@mustuse struct S {}

void test()
{
    S a, b;
    a = b;
}
