gcc/testsuite/gdc.test/fail_compilation/fail7424g.d
struct S7424g
{
    @property int g()() { return 0; }
    void test() shared { int f = g; }
}

